# phbl

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain  rust-toolchain.toml  rustfmt.toml  x86_64-oxide-elf.json  x86_64-oxide-none-elf.json
.github/workflows/: ci.yaml  ci.yml  license-check.yaml
src/: allocator.rs  fakes.rs  idt.rs  iomux.rs  kflags.rs  loader.rs  main.rs  mem.rs  mmu.rs  phbl.ld  phbl.rs  start.S  uart.rs
xtask/: Cargo.toml
xtask/src/: main.rs
