[package]
name = "phbl"
authors = ["Oxide Computer Company"]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
bit_field = "0.10"
bitstruct = "0.1"
cpio_reader = "0.1"
goblin = { version = "0.8", default-features = false, features = [
    "endian_fd",
    "elf64",
    "elf32",
    "alloc",
] }
miniz_oxide = "0.7"
seq-macro = "0.3"
static_assertions = "1.1"
x86 = "0.52"

[features]
ethx = []
ruby = []
ruby_red = []
recovery = []
kbm_debug = []
bootrd_debug = []
prom_debug = []
kmdb = []
kmdb_boot = []
boot_ramdisk = []
boot_net = []
boot_verbose = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
